--- a/src/application/Libretto.fxml
+++ b/src/application/Libretto.fxml
@@ -1,7 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LibrettoController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LibrettoController">
+   <top>
+      <Label text="Libretto universitario" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+   </top>
+   <center>
+      <VBox BorderPane.alignment="CENTER">
+         <children>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="142.0" minWidth="79.0" prefWidth="79.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="231.0" minWidth="156.0" prefWidth="230.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="152.0" prefWidth="153.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <TextField fx:id="txtCodice" GridPane.rowIndex="1" />
+                  <TextField fx:id="txtTitolo" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="txtDocente" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <Label text="Codice" GridPane.halignment="CENTER" />
+                  <Label text="Titolo" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                  <Label text="Docente" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+                  <Button fx:id="btnCerca" mnemonicParsing="false" onAction="#handleCerca" text="Cerca" GridPane.rowIndex="2" />
+                  <Button fx:id="btnInserisci" mnemonicParsing="false" onAction="#handleInserisci" text="Inserisci" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+               </children>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </GridPane>
+            <TextArea fx:id="txtMessage" editable="false" />
+         </children>
+      </VBox>
+   </center>
 </BorderPane>
